[gd_scene load_steps=6 format=3 uid="uid://dr3f8y7n76kxj"]

[ext_resource type="Texture2D" uid="uid://cw8kmdq00h88j" path="res://Assets/invincible_power.png" id="1_1cp4k"]
[ext_resource type="Script" path="res://scripts/invincible_power.gd" id="1_oiss7"]
[ext_resource type="AudioStream" uid="uid://b4putfq0fl8qv" path="res://Assets/audio/powerup.mp3" id="3_48mqn"]
[ext_resource type="AudioStream" uid="uid://b8yinjnds1gd1" path="res://Assets/audio/powerdown.mp3" id="4_njodf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3twn8"]
radius = 3.0

[node name="InvinciblePower" type="Area2D"]
collision_layer = 8
script = ExtResource("1_oiss7")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_1cp4k")
offset = Vector2(-0.5, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3twn8")

[node name="PowerEquipAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_48mqn")
volume_db = -13.117

[node name="PowerLossAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_njodf")
volume_db = -13.117

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
